--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "history": "^5.3.0",
+    "markdown-it": "^13.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
